[package]
name = "can-type-rs"
version = "1.0.6"
edition = "2021"
authors = ["zhuyu <zhuyu4839@gmail.com>"]
keywords = ["can", "j1939"]
license = "GPL-3.0"
description = "CAN type define."
homepage = "https://github.com/zhuyu4839/can-type-rs"
repository = "https://github.com/zhuyu4839/can-type-rs"
readme = "README.md"

[dependencies]
bitflags = "2"
bitfield-struct = "0"
log = "0"
paste = "1"
isotp-rs = "0.1.4"

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "time"]
optional = true

[dev-dependencies]
anyhow = "1"
hex-literal = "0.4"

[features]
default = ["std2004"]
async = ["tokio", "isotp-rs/async"]

std2004 = []
std2016 = []
can-fd = []


